--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,14 @@
             <version>2.6</version>
         </dependency>
 
+        <!--********** apache poi **********-->
+        <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+
     </dependencies>
 
     <!--<build>
