--- a/src/main/resources/public_system.properties
+++ b/src/main/resources/public_system.properties
@@ -8,3 +8,9 @@ jdbc.password=root
 druid.pool.size.max=20
 druid.pool.size.min=10
 druid.pool.size.init=5
+
+#rabbitmq配置
+mq.username=guest
+mq.password=guest
+mq.port=5672
+mq.host=localhost
