--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,7 @@
         </dependency>
 
 
+        <!--********** activemq **********-->
         <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-spring -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -176,44 +177,30 @@
             <artifactId>activemq-all</artifactId>
             <version>5.9.0</version>
         </dependency>
-    </dependencies>
 
-    <!--<build>
-      <finalName>my-demo</finalName>
-      <pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;
-        <plugins>
-          <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-            <version>3.0.0</version>
-          </plugin>
-          &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;
-          <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>3.0.2</version>
-          </plugin>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.7.0</version>
-          </plugin>
-          <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.20.1</version>
-          </plugin>
-          <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <version>3.2.0</version>
-          </plugin>
-          <plugin>
-            <artifactId>maven-install-plugin</artifactId>
-            <version>2.5.2</version>
-          </plugin>
-          <plugin>
-            <artifactId>maven-deploy-plugin</artifactId>
-            <version>2.8.2</version>
-          </plugin>
-        </plugins>
-      </pluginManagement>
-    </build>-->
+        <!--********** jedis **********-->
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-redis -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.7.RELEASE</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <finalName>my-demo</finalName>
