--- a/src/main/resources/public_system.properties
+++ b/src/main/resources/public_system.properties
@@ -14,3 +14,11 @@ mq.username=guest
 mq.password=guest
 mq.port=5672
 mq.host=localhost
+
+#redis配置
+redis.host=192.168.208.128
+redis.port=6379
+redis.password=root
+redis.timeout=2000
+redis.maxIdle=5
+redis.maxTotal=10
