--- a/pom.xml
+++ b/pom.xml
@@ -210,7 +210,7 @@
     </dependencies>
 
     <build>
-        <finalName>my-demo</finalName>
+        <finalName>java-base-core</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
